    be safe to change to 8 now (Android Nougat is mostly 8 compatible), this covers > 80% users.
  - Changed oraclejdk build to 11

- WARNING!!!!!
  -> lwjgl requires Java 8!!!  Try lwjgl3 (works with Java 11) and see whether it also works with Java 8!

- OSGI: "JavaSE;version=1.8"  / https://www.aqute.biz/2020/03/02/osgi-on-android.html

// TODO TZ check
// TODO TZ fix


Java Version
============
Summary:
- We should aim for Oreo or later (Android 8.0, released 2017, API Level 26: https://apilevels.com/)
- Java 8 should be fine.
- Try animal-sniffer plugin for higher versions, e.g. Java 9


- Android Runtime replaced Dalvik as default Runtime in Android 5: https://en.wikipedia.org/wiki/Android_version_history
- Android 8 (Oreo) is about 8% share:
  - https://apilevels.com/
  - https://www.composables.co/tools/distribution-chart
- https://medium.com/androiddevelopers/support-for-newer-java-language-apis-bca79fc8ef65
  - Support vor never Java features depend on Android Gradle Plugin 4.0.0 -> "Desugaring"
    -> Does that also work with OSGI?
    -> This was release in June 2017 ->
  - Android 11 support "up to" Java 13 (Question: complete 13 or partial 13??)
- 2018: https://jakewharton.com/androids-java-9-10-11-and-12-support/

Oreo was release in August 2017
Gradle 4.0.0 was released April 2020: https://developer.android.com/build/releases/past-releases/agp-4-0-0-release-notes

- Java 8 support: https://developer.android.com/studio/write/java8-support-table
- Java 8 support details: https://developer.android.com/studio/write/java8-support


Compliance checkers:
https://stackoverflow.com/questions/11048805/maven-plugin-for-checking-api-compliance-with-android
  -> TRY THIS!!!!
https://lvc.github.io/japi-compliance-checker/    (up to 2018 / Java 9)
https://simpligility.github.io/android-maven-plugin/index.html  (up to 2019)

0.4.0
=====
- Fixed javadoc to compile without warnings
- Java 9 compatibility automatically detected and used with Maven profiles 